src/test/deca/context/valid/custom/option/java/java2.deca
class TestJava {
    void methodJava() java("  WSTR \"toto\"");

    void methodJava2() java("  WSTR \"toto\"");
}
{
    TestJava test = new TestJava();
    test.methodJava();
    test.methodJava2();
}