src/test/deca/context/invalid/custom/option/java/java.deca
class TestJava {
    void methodJava() java(  WSTR \"toto\"");
}
{
    TestJava test = new TestJava();
    test.methodJava();
}